updated README file
git-svn-id: http://svn.opensync.org/plugins/kdepim@1028 53f5c7ee-bee3-0310-bbc5-ea0e15fffd5e

--- a/README
+++ b/README
@@ -12,8 +12,8 @@ Some parts based on the multisync 0.8x kdepim plugin, copyright:
 
 Compiling and installing kdepim_plugin
 --------------------------------------
-    $ cd kdepim_plugin
-    $ ./autogen.sh
+    $ autoreconf -sfi
+    $ ./configure
     $ make
     $ su
     $ make install
