--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 Stewart Heitmann <sheitmann@users.sourceforge.net>
 Eduardo Pereira Habkost <ehabkost@conectiva.com.br>
+Martin Koller <m.koller@surfeu.at>
